--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -643,7 +643,7 @@ SELECT {
 {english:"team", spanish:"equipo (m)",englishPhrase:"we're a great team", spanishPhrase:"somos un buen equipo",module:"module 09",type:"words"},
 {english:"to fit", spanish:"caber",englishPhrase:"it won't fit in that space", spanishPhrase:"no cabrá en ese espacio",module:"module 09",type:"words"},
 {english:"lately", spanish:"últimamente",englishPhrase:"lately I've started to exercise", spanishPhrase:"últimamente he empezado a hacer ejercicio",module:"module 09",type:"words"},
-{english:"phrase", spanish:"frase (f)",englishPhrase:"there's a beautiful phrase in that book", spanishPhrase:"hay una fraza hermosa en ese libro",module:"module 09",type:"words"},
+{english:"phrase", spanish:"frase (f)",englishPhrase:"there's a beautiful phrase in that book", spanishPhrase:"hay una frase hermosa en ese libro",module:"module 09",type:"words"},
 {english:"to struggle", spanish:"luchar",englishPhrase:"he struggled all his life", spanishPhrase:"luchó toda su vida",module:"module 09",type:"words"},
 {english:"to convince", spanish:"convencer",englishPhrase:"I'll try to convince her tonight", spanishPhrase:"trataré de convencerla esta noche",module:"module 09",type:"words"},
 {english:"struggle", spanish:"lucha (f)",englishPhrase:"it was a struggle to convince him", spanishPhrase:"fue una lucha para convencerlo",module:"module 09",type:"words"},
@@ -672,6 +672,56 @@ SELECT {
 {english:"iron", spanish:"planca (f)",englishPhrase:"can you bring me the iron please?", spanishPhrase:"¿me puedes traer la plancha por favor?",module:"module 09",type:"words"},
 {english:"skeleton", spanish:"esqueleto (m)",englishPhrase:"skeletons are scary", spanishPhrase:"los esqueletos dan miedo",module:"module 09",type:"words"},
 {english:"firewood", spanish:"leña (f)",englishPhrase:"we need firewood for the fire", spanishPhrase:"necesitamos leña para el fuego",module:"module 09",type:"words"},
+{english:"company", spanish:"empresa (f)",englishPhrase:"i have my own company", spanishPhrase:"tengo mi propia empresa",module:"module 10",type:"words"},
+{english:"self-employed", spanish:"autónomo/a",englishPhrase:"i am self employed", spanishPhrase:"soy autónomo/a",module:"module 10",type:"words"},
+{english:"business", spanish:"negocio (m)",englishPhrase:"it's a big business", spanishPhrase:"es un gran negocio",module:"module 10",type:"words"},
+{english:"to employ", spanish:"emplear",englishPhrase:"the company employs 10 people", spanishPhrase:"la empresa empleya a diez personas",module:"module 10",type:"words"},
+{english:"entrepreneur", spanish:"empreseario/a",englishPhrase:"my husband is an entrepreneur", spanishPhrase:"mi esposo es un empresario",module:"module 10",type:"words"},
+{english:"million", spanish:"millón (m)",englishPhrase:"he has millions in his account", spanishPhrase:"tiene milliónes en su cuenta",module:"module 10",type:"words"},
+{english:"unemployed", spanish:"desempleado/a",englishPhrase:"right now she is unemployed", spanishPhrase:"ahora está desempleyada",module:"module 10",type:"words"},
+{english:"fever, temperature", spanish:"fiebre (f)",englishPhrase:"she has a high fever", spanishPhrase:"tiene una fiebre alta",module:"module 10",type:"words"},
+{english:"boyfriend", spanish:"novio (m)",englishPhrase:"he's my boyfriend", spanishPhrase:"es mi movio",module:"module 10",type:"words"},
+{english:"to look for, to search for", spanish:"buscar",englishPhrase:"i've been looking for you", spanishPhrase:"he estado buscándote",module:"module 10",type:"words"},
+{english:"girlfriend", spanish:"novia (f)",englishPhrase:"i'm looking for a girlfriend", spanishPhrase:"estoy buscando una novia",module:"module 10",type:"words"},
+{english:"middle", spanish:"medio (m)",englishPhrase:"the one in the middle", spanishPhrase:"el que está en el medio",module:"module 10",type:"words"},
+{english:"place ", spanish:"lugar (m)",englishPhrase:"where is this place", spanishPhrase:"¿dónde está este lugar?",module:"module 10",type:"words"},
+{english:"without, except", spanish:"sin",englishPhrase:"he left without me", spanishPhrase:"se fue sin mi",module:"module 10",type:"words"},
+{english:"rice", spanish:"arroz (m)",englishPhrase:"i prefer brown rice", spanishPhrase:"prefiero arroz integral",module:"module 10",type:"words"},
+{english:"sugar", spanish:"azúcar (m)",englishPhrase:"too much sugar is bad for your health", spanishPhrase:"demasiado azúcar es malo para tu salud",module:"module 10",type:"words"},
+{english:"less", spanish:"menos",englishPhrase:"less sugar please", spanishPhrase:"menos azúcar por favor",module:"module 10",type:"words"},
+{english:"to hang", spanish:"colgar",englishPhrase:"i hang my clothes in the wardrobe", spanishPhrase:"cuelgo mi ropa en el closet",module:"module 10",type:"words"},
+{english:"to mix", spanish:"mezclar",englishPhrase:"you mix the ingredients together", spanishPhrase:"mezclas los ingredientes",module:"module 10",type:"words"},
+{english:"mixture", spanish:"mezcla (f)",englishPhrase:"it's a toxic mixture", spanishPhrase:"es una mezcla tóxica",module:"module 10",type:"words"},
+{english:"tooth", spanish:"diente (m)",englishPhrase:"she has no teeth!", spanishPhrase:"¡no tiene dientes!",module:"module 10",type:"words"},
+{english:"witness", spanish:"testigo (m/f)",englishPhrase:"she's the witness", spanishPhrase:"ella es la testigo",module:"module 10",type:"words"},
+{english:"occupied, busy", spanish:"ocupado/a",englishPhrase:"Ana is very busy this morning", spanishPhrase:"Ana está muy ocupada esta mañana",module:"module 10",type:"words"},
+{english:"vacation, holiday", spanish:"vacaciones (f)",englishPhrase:"i had a wonderful vacation", spanishPhrase:"tuve unas vacaciones maravillosas",module:"module 10",type:"words"},
+{english:"income", spanish:"ingresos (m)",englishPhrase:"i'm not going to tell you my income", spanishPhrase:"no voy a decirte mis ingresos",module:"module 10",type:"words"},
+{english:"to promise", spanish:"prometer",englishPhrase:"i promise you i'll be there", spanishPhrase:"te prometo que estaré allí",module:"module 10",type:"words"},
+{english:"discovery", spanish:"descubrimiento (m)",englishPhrase:"a very important discovery", spanishPhrase:"un descubrimiento muy importante",module:"module 10",type:"words"},
+{english:"to achieve", spanish:"lograr",englishPhrase:"did you achieve your goals?", spanishPhrase:"¿has logrado tus objetivos?",module:"module 10",type:"words"},
+{english:"progress", spanish:"progresos  (m)",englishPhrase:"what prograss have you achieved recently?", spanishPhrase:"¿qué progreso has logrado recientemente?",module:"module 10",type:"words"},
+{english:"order", spanish:"orden (f)",englishPhrase:"an order of fries please", spanishPhrase:"una orden de papas por favor",module:"module 10",type:"words"},
+{english:"identical", spanish:"idéntico/a",englishPhrase:"they are wearing identical dresses", spanishPhrase:"están llevando vestidos idénticos",module:"module 10",type:"words"},
+{english:"period", spanish:"período",englishPhrase:"a period of time", spanishPhrase:"un período de tiempo",module:"module 10",type:"words"},
+{english:"painful", spanish:"doloroso/a",englishPhrase:"it was a very painful period in my life", spanishPhrase:"fue un período muy dolorosa en mi vida",module:"module 10",type:"words"},
+{english:"roof", spanish:"techo (m)",englishPhrase:"to repair a roof takes time", spanishPhrase:"para reparar un techo lleva tiempo",module:"module 10",type:"words"},
+{english:"winter", spanish:"invierno (m)",englishPhrase:"i dont like cold winters", spanishPhrase:"no me gustan los inviernos fríos",module:"module 10",type:"words"},
+{english:"politics, policy", spanish:"política (f)",englishPhrase:"i'm sorry but it's a company policy", spanishPhrase:"lo siento per es la política de la empresa",module:"module 10",type:"words"},
+{english:"fact", spanish:"hecho (m)",englishPhrase:"just tell me the facts of what happened", spanishPhrase:"sólo dime los hechos de lo que pasó",module:"module 10",type:"words"},
+{english:"unknown", spanish:"desconocido/a",englishPhrase:"many of the facts are still unknown", spanishPhrase:"muchos de los hechos son desconocidos todavía",module:"module 10",type:"words"},
+{english:"to introduce, present", spanish:"presentar",englishPhrase:"let me introduce you to him", spanishPhrase:"déjame presentártelo",module:"module 10",type:"words"},
+{english:"name", spanish:"nombre (m)",englishPhrase:"what is your name?", spanishPhrase:"¿cuál es tu nombre?",module:"module 10",type:"words"},
+{english:"aplauso (m)", spanish:"aplauso (m)",englishPhrase:"there was a loud applause", spanishPhrase:"había un fuerte aplauso",module:"module 10",type:"words"},
+{english:"nerve", spanish:"nervio (m)",englishPhrase:"how nerve racking!", spanishPhrase:"¡qué nervio!",module:"module 10",type:"words"},
+{english:"hall, coridor", spanish:"pasillo (m)",englishPhrase:"they're waiting in the corridor", spanishPhrase:"están esperando en el pasillo",module:"module 10",type:"words"},
+{english:"meat, flesh", spanish:"carne (f)",englishPhrase:"do you eat meat?", spanishPhrase:"¿comes carne?",module:"module 10",type:"words"},
+{english:"kilo", spanish:"kilo (m)",englishPhrase:"a kilo of meat please", spanishPhrase:"un kilo de carne por favor",module:"module 10",type:"words"},
+{english:"to contain", spanish:"contener",englishPhrase:"it contains everything you need", spanishPhrase:"contiene todo lo que necesitas",module:"module 10",type:"words"},
+{english:"container", spanish:"contenedor (m), recipiente (m)",englishPhrase:"what's inside the container?", spanishPhrase:"¿qué hay adentro del contenedor?",module:"module 10",type:"words"},
+{english:"to cool, cool down", spanish:"enfriar, enfriarse",englishPhrase:"it needs to cool down first", spanishPhrase:"necesita enfriarse primero",module:"module 10",type:"words"},
+{english:"obviously", spanish:"obviamente",englishPhrase:"obviously, we have to wait until it cools", spanishPhrase:"obviamente tenemos que esperara hasta que se enfríe",module:"module 10",type:"words"},
+{english:"exportacion", spanish:"exportación (f)",englishPhrase:"the exportation of fruits", spanishPhrase:"la exportación de frutas",module:"module 10",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -698,8 +748,8 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"he's trapped in a marriage", spanishPhrase:"está atrapado en un matrimonio",module:"module 02",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"it's a circular shape", spanishPhrase:"es una forma circular",module:"module 02",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the platform is not stable", spanishPhrase:"la plataforma no es estable",module:"module 02",type:"phrases"},
-{english:"", spanish:"",englishPhrase:"the knife is very sharp", spanishPhrase:"el cuchillo es muy filosa",module:"module 02",type:"phrases"},
-{english:"", spanish:"",englishPhrase:"the graphic content of te advertisement provoked a negative reaction", spanishPhrase:"el contenido gráfico del anuncio provocó una reacción negativa",module:"module 02",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the knife is very sharp", spanishPhrase:"el cuchillo es muy filoso",module:"module 02",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the graphic content of the advertisement provoked a negative reaction", spanishPhrase:"el contenido gráfico del anuncio provocó una reacción negativa",module:"module 02",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"she's a very studious girl with alot of willpower", spanishPhrase:"es una niña muy estudiosa con mucha fuerza de voluntad",module:"module 02",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"she's highly educated", spanishPhrase:"es altamente educada",module:"module 02",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"he turned left and crashed with a bicycle", spanishPhrase:"giró a la izquierda y chocó con una bicicleta",module:"module 02",type:"phrases"},
@@ -715,7 +765,7 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"my bag is ruined", spanishPhrase:"mi bolsa está arruinada",module:"module 02",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"do you have more tape?", spanishPhrase:"¿tienes más cinta?",module:"module 02",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the speed was unforgetable", spanishPhrase:"la velocidad fue inolvidable",module:"module 02",type:"phrases"},
-{english:"", spanish:"",englishPhrase:"a paranoid man was walking straight ahead when he bumpted into a ghost", spanishPhrase:"un hombre paranóico estaba caminando todo derecho cuando se topó con un fantasma",module:"module 02",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a paranoid man was walking straight ahead when he bumped into a ghost", spanishPhrase:"un hombre paranóico estaba caminando todo derecho cuando se topó con un fantasma",module:"module 02",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"only a specialist can do it", spanishPhrase:"sólo un especialista puede hacerlo",module:"module 02",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i'm charging my phone", spanishPhrase:"estoy cargando mi teléfono",module:"module 02",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"they're going to trick them with a law suit", spanishPhrase:"van a engañarlos con una demanda",module:"module 02",type:"phrases"},
@@ -917,7 +967,33 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"the effect is instant", spanishPhrase:"el efecto es instantáneo",module:"module 09",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"we must cancel due to the rain today", spanishPhrase:"tenemos que cancelar debido a la lluvia hoy",module:"module 09",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"he tried to convince me that he was right", spanishPhrase:"trató de convencerme de que tenía razón",module:"module 09",type:"phrases"},
-
+{english:"", spanish:"",englishPhrase:"the exportation of rice and meat", spanishPhrase:"la exportación de arroz y carne",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i like coffee without sugar", spanishPhrase:"me gusta el café sin azúcar",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the container must cool down before mixing the ingredients", spanishPhrase:"el contenedor tiene que enfriarse antes de mezclar los ingredientes",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he already has a girlfriend", spanishPhrase:"ya tiene una novia",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she doesn't have a boyfriend", spanishPhrase:"ella no tiene un novio",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the witness saw everything", spanishPhrase:"el testigo vio todo",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the business is strict about vacations", spanishPhrase:"el negocio es estricto sobre las vacaciones",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i would like a little less please", spanishPhrase:"me gustaría un poco menos por favor",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i'm ill, i have a fever", spanishPhrase:"estoy enferma, tengo fiebre",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a painful nerve", spanishPhrase:"un nervio doloroso",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it contains an identical mixture", spanishPhrase:"contiene una mezcla idéntica",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a kilo of apples", spanishPhrase:"un kilo de manzanas",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"who gave the order", spanishPhrase:"¿quién dio la orden?",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a policy that is going to affect millions of unemployed people", spanishPhrase:"es una política que va a afectar millones de personas desempleyadas",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i promise you that i'm going to repair the roof before winter", spanishPhrase:"te prometo que voy a reperar el techo antes del invierno",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the company employs many people", spanishPhrase:"la empresa emplea mucha gente",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"sugar is not good for your teeth", spanishPhrase:"el azúcar no es buena para tus dientes",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she's an entrepreneur", spanishPhrase:"es empresaria",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"we achieved a lot of progress in this period", spanishPhrase:"logramos muchos progreso en este período",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there are many unknown facts", spanishPhrase:"hay muchos hechos desconocidos",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"his income as a self-employed entrepreneur", spanishPhrase:"sus ingresos como un empresario autónomo",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it was in the middle of the corridor", spanishPhrase:"estaba en el medio del pasillo",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there isn't a place to hang it", spanishPhrase:"no hay un lugar para colgarlo",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"obviously i'm very busy", spanishPhrase:"obviamente estoy muy ocupado/a",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i don't remember the name of the company", spanishPhrase:"no recuerdo el nombre de la empresa",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a new discovery that they want to present to us", spanishPhrase:"es un nuevo descubrimiento que quieren presentarnos",module:"module 10",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the applause was very loud", spanishPhrase:"el aplauso fue muy fuerte",module:"module 10",type:"phrases"},
        ],
     }
     }
