--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -872,6 +872,56 @@ SELECT {
 {english:"bear", spanish:"oso (m)",englishPhrase:"help!  a bear is chasing me", spanishPhrase:"¡ayuda!  un oso me está persiguiendo",module:"module 13",type:"words"},
 {english:"bookstore", spanish:"librería (f)",englishPhrase:"is there a book store around here?", spanishPhrase:"¿hay una librería por aquí?",module:"module 13",type:"words"},
 {english:"shovel", spanish:"pala (f)",englishPhrase:"the shovel fell over", spanishPhrase:"la pala cayó",module:"module 13",type:"words"},
+{english:"to sweat", spanish:"sudar",englishPhrase:"i'm sweating like crazy with this heat", spanishPhrase:"estoy sudando como loco/a con este calor",module:"module 14",type:"words"},
+{english:"excess, leftover, surplus", spanish:"sobra (f)",englishPhrase:"is there money leftover?", spanishPhrase:"¿hay dinero de sobra?",module:"module 14",type:"words"},
+{english:"tiger", spanish:"tigre (m)",englishPhrase:"we saw a tiger at the zoo", spanishPhrase:"vimos un tigre en el zoológico",module:"module 14",type:"words"},
+{english:"briefly", spanish:"brevemente",englishPhrase:"i spoke with him briefly yesterday", spanishPhrase:"ayer hablé con el brevemente",module:"module 14",type:"words"},
+{english:"participant", spanish:"participante (m/f)",englishPhrase:"the participants are ready", spanishPhrase:"los participantes están listos",module:"module 14",type:"words"},
+{english:"editor", spanish:"editor, editora",englishPhrase:"she's the editor of this newspaper", spanishPhrase:"ella es la editora de este periódico",module:"module 14",type:"words"},
+{english:"swimming pool", spanish:"alberca (f), piscina (f)",englishPhrase:"the pool is enormous", spanishPhrase:"la alberca es enorme",module:"module 14",type:"words"},
+{english:"spider", spanish:"araña (f)",englishPhrase:"are you scared of spiders?", spanishPhrase:"¿tienes miedo de las arañas?",module:"module 14",type:"words"},
+{english:"diplomatic", spanish:"diplomático/a",englishPhrase:"the diplomats arrived on time", spanishPhrase:"los diplomáticos llegaron a tiemp",module:"module 14",type:"words"},
+{english:"to get dirty", spanish:"ensuciarse",englishPhrase:"how did your clothes get so dirty?", spanishPhrase:"cómo se ensució tanto tu ropa?",module:"module 14",type:"words"},
+{english:"educated", spanish:"educado/a",englishPhrase:"he's very well educated", spanishPhrase:"es muy bien educado",module:"module 14",type:"words"},
+{english:"constant", spanish:"constante",englishPhrase:"it's a constant annoyance", spanishPhrase:"es una molestia constante",module:"module 14",type:"words"},
+{english:"constantly", spanish:"constantemente",englishPhrase:"she's constantly talking", spanishPhrase:"habla constantemente",module:"module 14",type:"words"},
+{english:"thread", spanish:"hilo (m)",englishPhrase:"white colored thread", spanishPhrase:"hilo de color blanco",module:"module 14",type:"words"},
+{english:"to sew", spanish:"coser",englishPhrase:"i love to sew in my spare time", spanishPhrase:"me encanta coser en mi tiempo libre",module:"module 14",type:"words"},
+{english:"rescue, ransom", spanish:"rescate (m)",englishPhrase:"the rescue was successfull", spanishPhrase:"el rescate tuvo éxito",module:"module 14",type:"words"},
+{english:"frozen", spanish:"congelado/a",englishPhrase:"the meat is still frozen", spanishPhrase:"la carne está congelada todavia",module:"module 14",type:"words"},
+{english:"sense, feeling", spanish:"sentimiento (m)",englishPhrase:"there's a feeling of happiness in the house", spanishPhrase:"hay un sentimiento de felicidad en la casa",module:"module 14",type:"words"},
+{english:"urgency", spanish:"urgencia",englishPhrase:"thiey did it with a sense of urgency", spanishPhrase:"lo hicieron con un sentimiento de urgencia",module:"module 14",type:"words"},
+{english:"happiness", spanish:"felicidad (f)",englishPhrase:"happiness is very important to me", spanishPhrase:"la felicidad es muy importante para mi",module:"module 14",type:"words"},
+{english:"factor", spanish:"factor (m)",englishPhrase:"there are many factors involved", spanishPhrase:"hay muchos factores involucrados",module:"module 14",type:"words"},
+{english:"involved", spanish:"involucrado/a",englishPhrase:"i think he was involved in the robbery", spanishPhrase:"creo que estuvo involucrado en el robo",module:"module 14",type:"words"},
+{english:"robbery", spanish:"robo (m)",englishPhrase:"the robbery took place yesterday", spanishPhrase:"el robo tuvo lugar ayer",module:"module 14",type:"words"},
+{english:"to fish", spanish:"pescar",englishPhrase:"he's fishing on the boat today", spanishPhrase:"está pescando en el barco hoy",module:"module 14",type:"words"},
+{english:"bell", spanish:"campana (f)",englishPhrase:"the bell sounds at 12 o'clock", spanishPhrase:"la campana suena a las doce",module:"module 14",type:"words"},
+{english:"jumper, sweater", spanish:"suéter (m)",englishPhrase:"she bought me a sweater for christmas", spanishPhrase:"me compró un suéter para navidad",module:"module 14",type:"words"},
+{english:"wool", spanish:"lana (f)",englishPhrase:"it's a wool sweater", spanishPhrase:"es un suéter de lana",module:"module 14",type:"words"},
+{english:"stupidity", spanish:"estupidez (f)",englishPhrase:"i can't stand his stupidity", spanishPhrase:"no puedo soportar su estupidez",module:"module 14",type:"words"},
+{english:"wet", spanish:"mojado/a",englishPhrase:"be careful because the floor is wet", spanishPhrase:"con cuidado porque el piso está mojado",module:"module 14",type:"words"},
+{english:"label, etiquette", spanish:"etiqueta (f)",englishPhrase:"what does the label say?", spanishPhrase:"¿qué dice la etiqueta?",module:"module 14",type:"words"},
+{english:"west", spanish:"oeste (m)",englishPhrase:"it's located in the west of the country", spanishPhrase:"está ubicado en el oeste del país",module:"module 14",type:"words"},
+{english:"wounded", spanish:"herido/a",englishPhrase:"she was wounded in the fight", spanishPhrase:"fue herida en la pelea",module:"module 14",type:"words"},
+{english:"fight", spanish:"pelea (f)",englishPhrase:"there was a fight in the supermarket", spanishPhrase:"había una pelea en el super",module:"module 14",type:"words"},
+{english:"to fight", spanish:"pelear",englishPhrase:"he wants to fight you", spanishPhrase:"quiere pelear contigo",module:"module 14",type:"words"},
+{english:"helmet", spanish:"casco (m)",englishPhrase:"he's not wearing a helmet", spanishPhrase:"no lleva casco",module:"module 14",type:"words"},
+{english:"chocolate", spanish:"chocolate (m)",englishPhrase:"all kids love chocolate", spanishPhrase:"a todos los niños les encanta el chocolate",module:"module 14",type:"words"},
+{english:"fisherman", spanish:"pescador, pescadora",englishPhrase:"all the men in this village are fishermen", spanishPhrase:"todos los hombres de este pueblo son pescadores",module:"module 14",type:"words"},
+{english:"perfume", spanish:"perfume (m)",englishPhrase:"she would like perfume for christmas", spanishPhrase:"le gustaria un perfume para navidad",module:"module 14",type:"words"},
+{english:"acid", spanish:"ácido (m)",englishPhrase:"it's strong like an acide", spanishPhrase:"es fuerte como un ácido",module:"module 14",type:"words"},
+{english:"suggestion", spanish:"sugerencia (f)",englishPhrase:"can i make a suggestion?", spanishPhrase:"¿puedo hacer una sugerencia?",module:"module 14",type:"words"},
+{english:"deserted", spanish:"desierto/a",englishPhrase:"a deserted island in the pacific", spanishPhrase:"una isla desierta en el pacifico",module:"module 14",type:"words"},
+{english:"future", spanish:"futuro (m)",englishPhrase:"who knows what will happen in the future?", spanishPhrase:"¿quién sabe lo que pasará en el futuro?",module:"module 14",type:"words"},
+{english:"mouth", spanish:"boca (f)",englishPhrase:"open your mouth please", spanishPhrase:"abre su boca por favor",module:"module 14",type:"words"},
+{english:"rich, tasty", spanish:"rico/a",englishPhrase:"she married a rich guy", spanishPhrase:"se casó con un hombre rico",module:"module 14",type:"words"},
+{english:"to remove, to take away", spanish:"quitar",englishPhrase:"i can't remove this stain", spanishPhrase:"no puedo quitar esta mancha",module:"module 14",type:"words"},
+{english:"model", spanish:"modelo (m)",englishPhrase:"what model is it?", spanishPhrase:"¿qué modelo es?",module:"module 14",type:"words"},
+{english:"opinion", spanish:"opinión (f)",englishPhrase:"what's her opinion?", spanishPhrase:"¿cuál es su opinión?",module:"module 14",type:"words"},
+{english:"help", spanish:"ayuda (f)",englishPhrase:"thanks for the help", spanishPhrase:"gracias por la ayuda",module:"module 14",type:"words"},
+{english:"resource", spanish:"recurso (m)",englishPhrase:"the company simply doesn't have the resources", spanishPhrase:"la empresa simplemente no tiene los recursos",module:"module 14",type:"words"},
+{english:"to invest", spanish:"invertir",englishPhrase:"i want to invest in your future", spanishPhrase:"quiero invertir en tu futuro",module:"module 14",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -1226,6 +1276,35 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"your love is like oxygen for me", spanishPhrase:"tu amor es como el oxígeno para mí",module:"module 13",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"straight as an arrow", spanishPhrase:"derecho como una flecha",module:"module 13",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"there's a lot of traffic on the highway", spanishPhrase:"hay mucho tráfico en la carretera",module:"module 13",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i'm going to buy thread to sew", spanishPhrase:"voy a comprar hilo para coser",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a wool jumper", spanishPhrase:"es un suéter de lana",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they are both involved in the robbery", spanishPhrase:"los dos están involucrados en el robo",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"you have to be diplomatic in this situation", spanishPhrase:"tienes que ser diplomático en esta situación",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she's very educated", spanishPhrase:"es muy educada",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"what does the ticket say?", spanishPhrase:"¿qué dice la etiqueta?",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he was wounded in the fight", spanishPhrase:"fue herido en la pelea",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the chocolate is very rich in antioxidants", spanishPhrase:"el chocolate es muy rico en antioxidantes",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"we're going to invest in our future", spanishPhrase:"vamos a invertir en nuestro futuro",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i want to remove all three", spanishPhrase:"quiero quitar los tres",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she doesn't want to fight with you", spanishPhrase:"no quiere pelear contigo",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there was a spider in the pool", spanishPhrase:"había una araña en la piscina",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the boy got dirty playing in the garden", spanishPhrase:"el niño se ensució jugando en el jardín",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"one of the ingredients is acid", spanishPhrase:"uno de los ingredientes es el ácido",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she wears perfume constantly", spanishPhrase:"ella lleva perfume constantemente",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the opinion of the editor is very important", spanishPhrase:"la opiníon de la editora es muy importante",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"each participant spoke briefly", spanishPhrase:"cada participante habló brevemente",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the desert in the west of australia is enormous", spanishPhrase:"el desierto en el oeste de australia es enorme",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he loves to fish here with his friends", spanishPhrase:"le encanta pescar aquí con sus amigos",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they are all frozen", spanishPhrase:"todos están congelados",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"you're going to sweat a lot in that helmet", spanishPhrase:"vas a sudar mucho en ese casco",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it needs constant attention", spanishPhrase:"necesita atención constante",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the level of stupidity is incredible", spanishPhrase:"el nivel de estupidez es increible",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a church with a bell", spanishPhrase:"una iglesia con una campana",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the model hurt her mouth", spanishPhrase:"la modelo se lastimó la boca",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they are asking for a ransom", spanishPhrase:"están pidiendo un rescate",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the fisherman asked for help", spanishPhrase:"el pescador pidió ayuda",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"natural resources are an important factor", spanishPhrase:"los recursos naturales son un factor importante",module:"module 14",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they spoke about feelings of happiness", spanishPhrase:"hablaron sobre sentimientos de felicidad",module:"module 14",type:"phrases"},
     ],
     }
     }
